--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 <body>
-  <app-main-page></app-main-page>
+  <app-root></app-root>
 </body>
 </html>
